--- a/Assignment1/mark_data_exploration.ipynb
+++ b/Assignment1/mark_data_exploration.ipynb
@@ -665,7 +665,7 @@
    "metadata": {},
    "source": [
     "From the above plot it seems we can indentify quite a lot of related features in our dataset <br>\n",
-    "To move forward we decide: <br>\n",
+    "To move forward we decide to: <br>\n",
     "- Focus on analysing conditions affecting the likelihood and area of fires\n",
     "- Avoid including related fields (such as DC/DMC)\n",
     "- Disregard obvious relationships such as forest fires and seasonality\n",
@@ -1225,7 +1225,7 @@
     "            images[i] = exposure.rescale_intensity(images[i], out_range=(0.00001,1))\n",
     "            images[i] = exposure.adjust_gamma(images[i],gamma=2.5)\n",
     "\n",
-    "    #decision to \n",
+    "    #output format\n",
     "    if return_array == \"Images\":\n",
     "        return images\n",
     "    else:\n",
@@ -1288,6 +1288,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3> Pt 2.2 - Singular Value Decomposition</h3> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lambda values are:  [0.0, 2.00000000000000, 8.00000000000000]\n",
+      "Singular values: \n",
+      "0.0\n",
+      "1.4142135623730951\n",
+      "2.8284271247461903\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Import necessary libraries for the assignment\n",
+    "import numpy as np \n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.cm as cm\n",
+    "import math\n",
+    "\n",
+    "# Create matrix A\n",
+    "\n",
+    "A = [[0, 1, 1], [math.sqrt(2), 2, 0], [0, 1, 1]]\n",
+    "\n",
+    "\n",
+    "A = np.array(A)\n",
+    "\n",
+    "\n",
+    "# Transpose the matrix\n",
+    "\n",
+    "A_t = A.transpose()\n",
+    "\n",
+    "\n",
+    "# Multiply A with A_t\n",
+    "AA = np.dot(A_t, A)\n",
+    "\n",
+    "\n",
+    "# Create lambda matrix\n",
+    "from sympy import symbols, solve\n",
+    "\n",
+    "# Create a variable l which stands for lambda\n",
+    "\n",
+    "l = symbols('l')\n",
+    "\n",
+    "lambda_matrix = [[l, 0, 0], [0, l, 0], [0, 0, l]]\n",
+    "\n",
+    "lambda_matrix = np.array(lambda_matrix)\n",
+    "\n",
+    "\n",
+    "# Solving the equation det(AA - lambda*I) = 0\n",
+    "det_matrix = AA-lambda_matrix\n",
+    "\n",
+    "equation = det_matrix[0][0]*(det_matrix[1][1]*det_matrix[2][2]-det_matrix[2][1]*det_matrix[1][2])-det_matrix[1][0]*(det_matrix[0][1]*det_matrix[2][2]-det_matrix[2][1]*det_matrix[0][2])\n",
+    "\n",
+    "#Solve equation = 0\n",
+    "\n",
+    "result = solve(equation)\n",
+    "\n",
+    "print('Lambda values are: ', result)\n",
+    "\n",
+    "# The singular values are the square root of the eigenvalues:\n",
+    "\n",
+    "print('Singular values: ')\n",
+    "for i in result:\n",
+    "    print(math.sqrt(i))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1314,7 +1393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.10"
   },
   "orig_nbformat": 4
  },
